--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site Info
 title: Urvashi Rautela's private bathroom leaked video HD
-url: https://urvashi-rautela.mview.online
+url: https://maya-g.mview.online
 
 # Display app icon on site
 enable:
@@ -53,5 +53,4 @@ sass:
   style: :compressed
 
 exclude:
-  - README.md
   - LICENSE
