--- a/_config.yml
+++ b/_config.yml
@@ -20,14 +20,14 @@ app:
 marketing_header: Video Leaked Maya G Viral 2024
 marketing_desc: Discover the leaked full Maya G video tutorial that has taken Twitter by storm. Watch now to learn valuable tips and techniques from this exclusive content!
 
-article: | 
-<p>In recent days, a full video tutorial featuring Maya G has surfaced on Twitter, capturing the attention of fans and aspiring creators alike. This leaked content offers a unique opportunity to gain insights into Maya G's techniques and creative process, making it a must-watch for anyone interested in enhancing their skills.</p>
-
-<p>The tutorial covers a range of topics, from basic concepts to advanced techniques, providing viewers with a comprehensive understanding of the subject matter. Whether you're a beginner looking to learn the ropes or an experienced creator seeking to refine your skills, this tutorial has something for everyone.</p>
-
-<p>As the video continues to circulate on social media, many are sharing their thoughts and reactions, highlighting the value of the information presented. The buzz around this leaked tutorial has sparked discussions among fans, making it a trending topic on Twitter.</p>
-
-<p>Don't miss out on this exclusive content! Click the link to watch the full Maya G video tutorial now and take your skills to the next level. Join the conversation and share your thoughts with others who are equally excited about this valuable resource.</p>
+articlefull: |
+  <p>In recent days, a full video tutorial featuring Maya G has surfaced on Twitter, capturing the attention of fans and aspiring creators alike. This leaked content offers a unique opportunity to gain insights into Maya G's techniques and creative process, making it a must-watch for anyone interested in enhancing their skills.</p>
+  
+  <p>The tutorial covers a range of topics, from basic concepts to advanced techniques, providing viewers with a comprehensive understanding of the subject matter. Whether you're a beginner looking to learn the ropes or an experienced creator seeking to refine your skills, this tutorial has something for everyone.</p>
+  
+  <p>As the video continues to circulate on social media, many are sharing their thoughts and reactions, highlighting the value of the information presented. The buzz around this leaked tutorial has sparked discussions among fans, making it a trending topic on Twitter.</p>
+  
+  <p>Don't miss out on this exclusive content! Click the link to watch the full Maya G video tutorial now and take your skills to the next level. Join the conversation and share your thoughts with others who are equally excited about this valuable resource.</p>
 
 google-site: neCSupXCTLAeITDoius5FFj3xf8-XJDu2lE3_f7kKjQ
 google_analytics: # Optional
