--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,10 @@ app:
   icon: https://e7.pngegg.com/pngimages/862/923/png-clipart-video-player-computer-icons-media-player-play-button-blue-angle.png
   name: Maya G Video Leaked
   ios_id: 1322916600 # https://itunes.apple.com/us/app/dualog-admin/id1322916600
-  link_1: https://www.postzo.store/leaked-video?Mayagit
-  link_2: https://www.postzo.store/leaked-video?Mayagit
   screenshot: https://w0.peakpx.com/wallpaper/222/937/HD-wallpaper-paradise-sea-paradise-sea.jpg
-
+  link_1: https://www.postzo.store/leaked-video?Mayagit
+  2.link_2: https://www.postzo.store/leaked-video?Mayagit
+  
 # Marketing
 marketing_header: Video Leaked Maya G Viral 2024
 marketing_desc: Discover the leaked full Maya G video tutorial that has taken Twitter by storm. Watch now to learn valuable tips and techniques from this exclusive content!
