--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,10 @@ app:
   name: Maya G Video Leaked
   ios_id: 1322916600 # https://itunes.apple.com/us/app/dualog-admin/id1322916600
   screenshot: https://w0.peakpx.com/wallpaper/222/937/HD-wallpaper-paradise-sea-paradise-sea.jpg
-  android_id1: https://www.postzo.store/leaked-video?Mayagit
-  android_id2: https://www.postzo.store/leaked-video?Mayagit
+  
+link:  
+  url_1: https://www.postzo.store/leaked-video?Mayagit
+  url_2: https://www.postzo.store/leaked-video?Mayagit
   
 # Marketing
 marketing_header: Video Leaked Maya G Viral 2024
