--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site Info
-title: Watch the Leaked Full Maya G Video Tutorial on Twitter Now!
+title: (! Watch~Now !) Maya G Video Tutorial Leaked on Twitter Full HD
 url: https://maya-g.mview.online
 
 # Display app icon on site
